Added abcde.conf, updated mpd to work with pulse/jack, updated backup command

--- a/mpd.conf
+++ b/mpd.conf
@@ -8,4 +8,7 @@ playlist_directory "~/.config/mpd/playlists"
 music_directory "~/Music"
 
 auto_update "yes"
-
+audio_output {
+        type            "pulse"
+        name            "pulse audio"
+}
