--- a/tmux.conf
+++ b/tmux.conf
@@ -46,27 +46,23 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-set -g status-bg "colour234"
-set -g message-command-fg "colour231"
+set -g status "on"
+set -g status-style bg="colour234"
 set -g status-justify "left"
 set -g status-left-length "100"
-set -g status "on"
-set -g pane-active-border-fg "colour254"
-set -g message-bg "colour31"
 set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g message-fg "colour231"
-set -g message-command-bg "colour31"
-set -g status-attr "none"
-set -g pane-border-fg "colour240"
-set -g status-left-attr "none"
-setw -g window-status-fg "colour250"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour234"
-setw -g window-status-activity-attr "underscore"
-setw -g window-status-activity-fg "colour250"
+set -g message-style fg="colour231"
+set -g message-style bg="colour31"
+set -g message-command-style fg="colour231"
+set -g message-command-style bg="colour31"
+set -g pane-border-style fg="colour240"
+set -g pane-active-border-style fg="colour254"
+setw -g window-status-style fg="colour250"
+setw -g window-status-style bg="colour234"
+setw -g window-status-activity-style "underscore"
+setw -g window-status-activity-style fg="colour250"
+setw -g window-status-activity-style bg="colour234"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %H:%M|%b%d #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour252] #(whoami)@#H "
 setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
