Cleaned up ranger config, fixed zplug updating, moved to borg for media backups

--- a/abcde.conf
+++ b/abcde.conf
@@ -9,7 +9,7 @@
 # Encode tracks immediately after reading. Saves disk space, gives
 # better reading of 'scratchy' disks and better troubleshooting of
 # encoding process but slows the operation of abcde quite a bit:
-LOWDISK=y
+LOWDISK=n
 
 # Specify the method to use to retrieve the track information,
 # the alternative is to specify 'cddb':
@@ -17,10 +17,10 @@ CDDBMETHOD=cddb
 
 # Make a local cache of cddb entries and then volunteer to use
 # these entries when and if they match the cd:
-CDDBCOPYLOCAL="y"
-CDDBLOCALDIR="$HOME/.cddb"
-CDDBLOCALRECURSIVE="y"
-CDDBUSELOCAL="y"
+# CDDBCOPYLOCAL="y"
+# CDDBLOCALDIR="$HOME/.cddb"
+# CDDBLOCALRECURSIVE="y"
+# CDDBUSELOCAL="y"
 
 # Specify the encoder to use for FLAC. In this case
 # flac is the only choice.
@@ -82,8 +82,8 @@ mungefilename ()
 }
 
 # What extra options?
-MAXPROCS=2                              # Run a few encoders simultaneously
+MAXPROCS=4                              # Run a few encoders simultaneously
 PADTRACKS=y                             # Makes tracks 01 02 not 1 2
-EXTRAVERBOSE=2                          # Useful for debugging
-COMMENT='abcde version 2.7'             # Place a comment...
+EXTRAVERBOSE=0                          # Useful for debugging
+# COMMENT='abcde version 2.7'             # Place a comment...
 EJECTCD=n                               # Please eject cd when finished :-)
