--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @contimuum-boot 'on'
 set -g @contimuum-restore 'on'
 set-option -g @pane_resize "5"
-set -g @resurrect-save-shell-history 'on'
+# set -g @resurrect-save-shell-history 'on'
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Mar 2015
