Add tmux better mouse mode and tweek resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,17 +6,23 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
-set -g @contimuum-boot 'on'
-set -g @contimuum-restore 'on'
+set -g @contimuum-boot off
+set -g @contimuum-restore off
 set-option -g @pane_resize "5"
 # set -g @resurrect-save-shell-history 'on'
+set -g @resurrect-capture-pane-contents on
+set -g @resurrect-strategy-nvim 'session'
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Wed, 25 Mar 2015
 set -g history-limit 10000
 if-shell "test -f [file]" "source [file]"
 set -g terminal-overrides 'xterm:colors=256'
+
+set -g mouse on
 
 unbind C-b
 set -g prefix C-q
