Ignore /net in backup

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 set -g @contimuum-boot off
-set -g @contimuum-restore off
+set -g @contimuum-restore on
 set-option -g @pane_resize "5"
 # set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-capture-pane-contents on
