Clean up update script, backup server too, ranger updates
Ranger:
* add dragon drag and drop binding
* binding to delete files from Lbry library properly
* Ueberzug image previews. Seems to work better than w3m
* open image thumbnail preview for images in cwd
* icons

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -1,6 +1,8 @@
 
 # Use one of the supported image preview protocols
 set preview_images true
+set preview_images_method ueberzug
+default_linemode devicons2
 
 # Draw borders around columns? (separators, outline, both, or none)
 # Separators are vertical lines between columns.
@@ -10,3 +12,7 @@ set draw_borders both
 
 
 map x console delete
+map <C-d> shell dragon-drag-and-drop -a -x %p
+#set use_preview_script false
+map dl shell lbrynet file delete --delete_from_download_dir --file_name=%f
+map <C-t> shell sxiv -t .
