--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -101,6 +101,8 @@ window:
   # Scrolling distance multiplier.
   #multiplier: 3
 
+  opacity: 1.0
+
 
 # Font configuration
 font:
@@ -172,7 +174,7 @@ font:
   #
   # Thin strokes are suitable for retina displays, but for non-retina screens
   # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: false
+  # use_thin_strokes: false
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
@@ -371,11 +373,6 @@ colors:
   #
   #command: None
 
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
 
 selection:
   # This string contains all characters that are used as separators for
@@ -449,7 +446,7 @@ live_config_reload: true
 #working_directory: None
 
 # Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: true
+# alt_send_esc: true
 mouse:
   # Click settings
   #
