Update dragon drag and drop mapping

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -12,7 +12,8 @@ set draw_borders both
 
 
 map x console delete
-map <C-d> shell dragon-drag-and-drop -a -x %p
+# map <C-d> shell dragon-drag-and-drop -a -x %p
+map <C-d> shell dragon-drop -a -x %p
 #set use_preview_script false
 map dl shell lbrynet file delete --delete_from_download_dir --file_name=%f
-map <C-t> shell sxiv -t .
+map <C-t> shell nsxiv -t .
