--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -115,7 +115,8 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     #family: monospace
-    family: DejaVuSansMonoNerdFontMono
+    # family: DejaVuSansMonoNerdFontMono
+    family: DejaVuSansMonoForPowerline
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
