--- a/aconfmgr/files/etc/nix/nix.conf
+++ b/aconfmgr/files/etc/nix/nix.conf
@@ -6,6 +6,7 @@
 build-users-group = nixbld
 
 trusted-users = carl
-
+#extra-substituters = https://openlane.cachix.org
+#extra-trusted-public-keys = openlane.cachix.org-1:qqdwh+QMNGmZAuyeQJTH9ErW57OWSvdtuwfBKdS254E=
 # Disable sandbox
 # sandbox = false
